--- a/styles.css
+++ b/styles.css
@@ -201,8 +201,6 @@ footer h3{
     padding: 8px;
     height:10px;
     width:10px;
-    /* border: black solid 1px;
-    border-radius: 80%; */
     transition: color 0.65s;
 }
 .follow-links li a{
@@ -215,3 +213,16 @@ footer h3{
 .copy{
     margin-top:0px;
 }
+
+/* little dot
+.little-dot{
+    width: 10px;
+    top:0px;
+    left:0px;
+    height: 10px;
+    background-color: rgb(0, 0, 0);
+    position:absolute;
+    border-radius: 100%;
+    transition: all 0.5s;
+    z-index:100;
+} */
